--- a/microservice/Dockerfile
+++ b/microservice/Dockerfile
@@ -1,15 +1,14 @@
-FROM golang:buster AS build
+FROM golang:1.10 AS build
 WORKDIR /go/src
 COPY go ./go
 COPY main.go .
-COPY go.mod .
 
 ENV CGO_ENABLED=0
-RUN go get -t -x 
+RUN go get -d -v ./...
 
 RUN go build -a -installsuffix cgo -o openapi .
 
 FROM scratch AS runtime
 COPY --from=build /go/src/openapi ./
-EXPOSE 80/tcp
+EXPOSE 8080/tcp
 ENTRYPOINT ["./openapi"]
